--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,12 @@
 /* 
 CSS TABLE OF CONTENTS 
 
-# GLOBAL
+#GLOBAL
     # GLOBAL RESETS 
     # GLOBAL VARIABLES (CUSTOM PROPERTIES)
     # GLOBAL COLORS 
     # GLOBAL TYPOGRAPHY
+    # GLOBAL MEDIA (e.g. images) 
 
 #LAYOUT
     # MEDIA QUERIES (w/RESPONSIVE TYPOGRAPHY) 
@@ -80,15 +81,23 @@ body {
     }
 }
 
+/* RESPONSIVE IMAGES */
+img {
+    max-width: 100%;
+    height: auto;
+}
+
 /* CONTAINER */
 .container {
     max-width: 1200px;
     margin: 0 auto;
+    padding: 0 1em;
 }
 
 /* GRID-SYSTEM */
 .row {
     --gridgap: 2em;
+    margin-bottom: 4em;
 }
 
 @media (min-width: 768px) {
@@ -97,6 +106,18 @@ body {
         grid-template-columns: repeat(12, 1fr);
         gap: var(--gridgap);
     }
+}
+
+.row.vertical-centered {
+    align-items: center;
+}
+
+.row.swapped>*:first-child {
+    order: 2;
+}
+
+.row.swapped>*:last-child {
+    order: 1;
 }
 
 .one-whole {
@@ -136,6 +157,9 @@ body {
 }
 
 /* FOR DEMO GRID ONLY */
+.demo .row {
+    margin-bottom: 0;
+}
 
 .demo .row>* {
     background: rgb(0 0 0 / .1);
