--- a/css/style.css
+++ b/css/style.css
@@ -222,10 +222,12 @@ img {
     padding: 1em;
 }
 
+/* SITE MAIN */
 .site-main {
     background-color: #affbff;
 }
 
+/* SITE FOOTER */
 .site-footer {
     background-color: var(--color-footer-bg);
     padding: 6em 0;
@@ -233,12 +235,12 @@ img {
 
 .site-footer .site-nav ul {
     list-style: none;
-    margin-top: 4em;
+    margin: 0;
+    padding: 0;
 }
 
-.site footer a {
+.site-footer a {
     text-decoration: none;
-
 }
 
 /* -------------------------------- */
