--- a/css/style.css
+++ b/css/style.css
@@ -67,6 +67,21 @@ h3 {
     font-family: var(--font-headings);
 }
 
+h1 {
+    font-size: 2.25em;
+    line-height: 1.1;
+}
+
+h2 {
+    font-size: 1.875em;
+    line-height: 1.2;
+}
+
+h3 {
+    font-size: 1.5em;
+    line-height: 1.3;
+}
+
 p {
     max-width: 60ch;
 }
@@ -105,7 +120,8 @@ img {
 /* GRID-SYSTEM */
 .row {
     --gridgap: 2em;
-    margin-bottom: 4em;
+    padding-top: 2em;
+    padding-bottom: 2em;
 }
 
 @media (min-width: 768px) {
@@ -167,6 +183,7 @@ img {
 /* FOR DEMO GRID ONLY */
 .demo .row {
     margin-bottom: 0;
+    padding: 0;
 }
 
 .demo .row>* {
@@ -224,8 +241,19 @@ img {
 
 /* SITE MAIN */
 .site-main {
-    background-color: #affbff;
+    /* background-color: #affbff; */
 }
+
+section {
+    padding-top: 6em;
+    padding-bottom: 6em;
+}
+
+/* HERO SECTION */
+.hero {
+    background: pink;
+}
+
 
 /* SITE FOOTER */
 .site-footer {
